en/5.0/config/memory-config.rst
===========================
Use memory-related settings
===========================

This page is generated by Machine Translation from Japanese.

The maximum value of heap memory changes
========================================

If the contents of the crawl settings cause OutOfMemory error similar to
the following.

::

    java.lang.OutOfMemoryError: Java heap space

Increase the maximum heap memory occur. bin/setenv. [sh \| bat] to (in
this case the maximum value set 1024M) will change to-Xmx1024m.

::

    Windowsの場合
    ...-server -Xmx1024m

    Unixの場合
    ...-server -Xmx1024m"

Crawler side memory maximum value changes
=========================================

Crawler side memory maximum value can be changed. The default is 512 m.

Unplug the commented out webapps/fess/WEB-INF/classes/fess.dicon
crawlerJavaOptions to change, change the-Xmx1024m (in this case the
maximum value set 1024M).

::

            <property name="crawlerJavaOptions">new String[] {
    "-Djava.awt.headless=true",
    "-server",
    "-Xmx1024m",
    "-XX:MaxPermSize=128m",
    "-XX:-UseGCOverheadLimit",
    "-XX:+UseConcMarkSweepGC",
    "-XX:CMSInitiatingOccupancyFraction=75",
    "-XX:+CMSIncrementalMode",
    "-XX:+CMSIncrementalPacing",
    "-XX:CMSIncrementalDutyCycleMin=0",
    "-XX:+UseParNewGC",
    "-XX:+UseStringCache",
    "-XX:+UseTLAB",
    "-XX:+DisableExplicitGC"
    }</property>
