en/9.0/config/memory-config.rst
===========================
Use memory-related settings
===========================

This page is generated by Machine Translation from Japanese.

About the memory settings
=========================

Set the maximum memory per process in Java. So, do not use the upper
memory in the process also had 8 GB of physical memory on the server.
Memory consumption depending on the number of crawl threads and interval
will also change significantly. If not enough memory please change
settings in the subsequent procedure.

The maximum value of heap memory changes
========================================

If the contents of the crawl settings cause OutOfMemory error similar to
the following.

::

    java.lang.OutOfMemoryError: Java heap space

Increase the maximum heap memory occur. bin/setenv. [sh \| bat] to (in
this case maximum value set to 1 G)-xmx1g to change.

::

    Windowsの場合
    ...-server -Xmx1g

    Unixの場合
    ...-server -Xmx1g"

Crawler side memory maximum value changes
=========================================

Crawler side memory maximum value can be changed. The default is 512 m.

Unplug the commented out webapps/fess/WEB-INF/classes/fess.dicon
crawlerJavaOptions to change, change the-xmx1g (in this case maximum
value set to 1 G).

::

            <property name="crawlerJavaOptions">new String[] {
    "-Djava.awt.headless=true",
    "-server",
    "-Xmx1g",
    "-XX:MaxPermSize=128m",
    "-XX:-UseGCOverheadLimit",
    "-XX:+UseConcMarkSweepGC",
    "-XX:CMSInitiatingOccupancyFraction=75",
    "-XX:+CMSIncrementalMode",
    "-XX:+CMSIncrementalPacing",
    "-XX:CMSIncrementalDutyCycleMin=0",
    "-XX:+UseParNewGC",
    "-XX:+UseStringCache",
    "-XX:+UseTLAB",
    "-XX:+DisableExplicitGC"
    }</property>
